# cmos

./: Makefile  README.md  pyproject.toml
.cspell/: custom-dictionary.txt
.devcontainer/: Dockerfile  devcontainer.json
tests/: test_server.py  test_spiderball.py
